# wpi32

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  TODO.md
.github/workflows/: fmt_and_lint.yaml  test.yaml
asm/: Cargo.toml
asm/src/: lib.rs
asm/src/error/: lex_error.rs  macro_error.rs  mod.rs  parse_error.rs  print.rs
asm/src/lex/: identifier.rs  literal.rs  mod.rs  token.rs  util.rs
asm/src/lex/token/: directive.rs  instruction.rs  mod.rs  operator.rs  register.rs
asm/src/parse/: directive.rs  immediate.rs  instruction.rs  macro.rs  mod.rs  root.rs
asm/src/parse/ast/: immediate.rs  instruction.rs  macro.rs  mod.rs  register.rs
asm/src/parse/display/: impls.rs  mod.rs
asm/src/rewrite/: mod.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/error/: lex_error.rs  mod.rs  parse_error.rs  print.rs
docs/: grammar.ebnf
sim/: Cargo.toml
sim/src/: lib.rs
sim/src/error/: mod.rs
src/: error.rs  main.rs
tests/: asm_test.rs  lexer_test.rs
tests/common/: mod.rs
