[workspace]
members = [
	"asm",
	"common",
	"sim",
]
default-members = [
	"asm",
	"common",
	"sim",
]

[workspace.dependencies]
log = "0.4.17"

[package]
name = "wpi32"
version = "0.1.0"
edition = "2021"
description = "Zeus RISC-V extravaganza"
readme = "README.md"
license = "MIT"
publish = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
asm = { path="./asm" }
common = { path="./common" }
sim = { path="./sim" }

clap = "4.0.17"
fern = "0.6.1"
log = "0.4.17"
