[workspace]
members = [
	"asm",
	"sim",
]
default-members = [
	"asm",
	"sim",
]

[workspace.dependencies]
log = "0.4.17"
ansi_term = "0.12.1"

[package]
name = "wpi32"
version = "0.1.0"
edition = "2021"
description = "RISC-V extravaganza"
readme = "README.md"
license = "GPL-3.0-or-later"
publish = false

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
asm = { path="./asm" }
sim = { path="./sim" }

log = { workspace=true }
ansi_term = { workspace=true }

clap = "4.0.18"
fern = "0.6.1"
